# auto-personality-app

./: .gitignore  DEPLOY.md  DEPLOY_CHECKLIST.md  LICENSE  README.md  app.py  plan_app.md  pyproject.toml  requirements.txt  streamlit_deploy.md
.streamlit/: config.toml
data/: cars.json  questions.json
data/images/: honda_crv.avif
src/: __init__.py  matcher.py  personality.py  utils.py
